@startuml Circuit Breaker - Diagrama de Estados

' Definir colores para los estados
skinparam state {
  BackgroundColor<<closed>> LightGreen
  BackgroundColor<<open>> LightCoral
  BackgroundColor<<halfopen>> LightYellow
  BorderColor Black
  FontSize 14
}

[*] --> Closed : Inicio del sistema

state Closed {
  Closed : [ESTADO NORMAL]
  Closed : Estado normal
  Closed : Todas las peticiones pasan
  Closed : Monitorea tasa de fallos
}

state Open {
  Open : [PROTECCIÓN ACTIVA]
  Open : Circuito abierto
  Open : Rechaza peticiones inmediatamente
  Open : Activa fallback
  Open : Espera timeout de reset
}

state HalfOpen {
  HalfOpen : [PROBANDO RECUPERACIÓN]
  HalfOpen : Estado de prueba
  HalfOpen : Permite 1 petición de prueba
  HalfOpen : Si éxito -> CLOSED
  HalfOpen : Si fallo -> OPEN
}

Closed --> Open : Fallos >= 50%\nen ventana de 10s
Open --> HalfOpen : Transcurrieron\n60 segundos
HalfOpen --> Closed : Petición de\nprueba exitosa
HalfOpen --> Open : Petición de\nprueba falla

note right of Closed
  **Configuración:**
  • Umbral: 50% de fallos
  • Ventana: 10 segundos
  • Volumen mínimo: 5 peticiones
end note

note right of Open
  **Fallback activo:**
  • Status: pending
  • Encolar pago
  • HTTP 202 Accepted
end note

note right of HalfOpen
  **Auto-recuperación:**
  • Timeout: 60 segundos
  • 1 intento de prueba
  • Si OK → CLOSED
end note

@enduml
